# tango-serialline

./: .gitlab-ci.yml  CMakeLists.txt  README.md  pom.xml
doc/: Readme_modifications_SOLEIL.txt
doc/doc_html/: Attributes.html  Description.html  DevCommands.html  DevCommandsFrame.html  DevCommandsList.html  DevCommandsTable.html  Properties.html  SerialDescription.doc  TangoDevStates.html  index.html
scripts/: start-SerialLine.bat  test_serial_line.py
src/: ClassFactory.cpp  Doxyfile  Makefile  Makefile.VC  README  README_Elettra  Serial.cpp  Serial.h  Serial.xmi  SerialClass.cpp  SerialClass.h  SerialLinux.cpp  SerialStateMachine.cpp  SerialWin32.cpp  main.cpp
src/vcproj/: Class_dll.vcproj  Class_lib.vcproj  Serial.sln
